2004-10-03  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtktreeviewcolumn.c 
	(gtk_tree_view_column_setup_sort_column_id_callback): 
	Set sort_indicator to FALSE when appropriate.  (#153714, 
	Reinout van Schouwen)

	* gtk/gtktreeview.c (gtk_tree_view_search_position_func): 
	Fix positioning near the monitor boundaries.  (#154341,
	Ken Harris)

2004-10-01  Tor Lillqvist  <tml@iki.fi>

	* gdk/win32/gdkglobals-win32.c: Enable wintab (tablets) by
	default.

2004-10-01  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkcombobox.c (gtk_combo_box_set_model): Add a comment regarding
	cell renderers to the docs.

	* gtk/gtkcellview.c (gtk_cell_view_cell_layout_clear_attributes): 
	* gtk/gtktreeviewcolumn.c (gtk_tree_view_column_cell_layout_clear_attributes): 
	Silently ignore info being NULL. This is unavoidable with the 
	current design where we have every implementation of layout_clear
	call layout_clear_attributes, and also delegate calls to dependent
	cell layouts.  (#154191, Martyn Russell)
	
2004-10-01  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkfilechooserentry.c (gtk_file_chooser_entry_finalize): 
	Prevent a crash if the entry is finalized before the sorting
	idle is removed, noticed by Frederic Crozat.

2004-09-29  Abel Cheung  <maddog@linuxhall.org>

	* configure.in: Added "ang" to ALL_LINGUAS.

2004-09-28  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkfilechooserentry.c (update_current_folder_files): Turn
	off sorting while inserting batches of new files, since sorting
	is slow with the current list store implementation. The sorting
	is turned back on in an idle since the gnome-vfs backend returns
	directory contents in chunks of 100 files, and we don't want to
	turn sorting back on until the whole directory is read.

2004-09-27  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkliststore.c: Allow to disable sorting. This is meant
	to be internal functionality in 2.4. The new API necessary to
	use this functionality appears in 2.6. 
