@@ -1,3 +1,8 @@
+2004-10-04  Matthias Clasen  <mclasen@redhat.com>
+
+	* gtk/gtkwindow.c (gtk_window_set_icon_list): Ref the new
+	icons before unreffing the old ones.  (#154468, Morten Welinder)
+
 2004-10-03  Matthias Clasen  <mclasen@redhat.com>
 
 	* gtk/gtktreeviewcolumn.c 
